fixing img stretch on mobile

--- a/frontend/src/pages/info/InfoPage.scss
+++ b/frontend/src/pages/info/InfoPage.scss
@@ -12,7 +12,8 @@
     }
 
     img {
-      height: 80vh;
+      height: cover;
+      max-height: 80vh;
     }
 
     .info {
